fix modal issue with z-index

--- a/client/src/components/CurrentUserComp/_CurrentUserComp.scss
+++ b/client/src/components/CurrentUserComp/_CurrentUserComp.scss
@@ -1,10 +1,10 @@
 .welcome-message {
-	width: $width-desk;
-	height: 11.5rem;
-	position: absolute;
+	// width: $width-desk;
+	// height: 11.5rem;
+	// position: absolute;
 	display: grid;
 	place-items: center;
-	z-index: 0;
+	// z-index: 0;
 	span {
 		font-size: 5.5rem;
 		color: $white;
